----------------------

 -


****************************************************************************
*                   Important Behavior Changes                             *
****************************************************************************

- QtWidgets

  * [QTBUG-8836] QAbstractItemView now allows manual deselect in
    SingleSelection mode (with control modifier)

****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------

 - QRect:
   * Added marginsAdded(), marginsRemoved() and operators +, -, +=, -=
     taking a QMargins object allowing for conveniently adding or removing
     margins.
 - QMargins:
   * Added operators for adding and subtracting QMargins objects,
     multiplication and division for int/qreal and unary minus.

 - QMessageAuthenticationCode
    * New class for hash-based message authentication code added to QtCore.

 - QRegularExpression
    * It's now possible to know the names of the named capturing groups
      inside the pattern string, as well as the numerical index of each
      named capturing group.

 - QPointer
    * It is now possible to create a QPointer with a const templated type.

 -

QtGui
-----

 - QOffscreenSurface
    * New class for rendering graphics using OpenGL in an arbitrary thread
      without needing to use a hidden QWindow.


QtNetwork
---------

 -

QtWidgets
---------

- QGraphicsView:
  * Added function rubberBandRect() and signal rubberBandChanged.

****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************