@@ -539,7 +539,7 @@ void QDataStream::setByteOrder(ByteOrder bo)
     \value Qt_4_8 Same as Qt_4_6.
     \value Qt_4_9 Same as Qt_4_6.
     \value Qt_5_0 Version 13 (Qt 5.0)
-    \value Qt_5_1 Same as Qt_5_0.
+    \value Qt_5_1 Version 14 (Qt 5.1)
 
     \sa setVersion(), version()
 */
@@ -571,6 +571,7 @@ void QDataStream::setByteOrder(ByteOrder bo)
 
     \table
     \header \li Qt Version       \li QDataStream Version
+    \row \li Qt 5.1                  \li 14
     \row \li Qt 5.0                  \li 13
     \row \li Qt 4.6                  \li 12
     \row \li Qt 4.5                  \li 11
