@@ -86,7 +86,7 @@ public:
         Qt_4_8 = Qt_4_7,
         Qt_4_9 = Qt_4_8,
         Qt_5_0 = 13,
-        Qt_5_1 = Qt_5_0
+        Qt_5_1 = 14
 #if QT_VERSION >= 0x050200
 #error Add the datastream version for this Qt version
 #endif
